[gd_scene load_steps=9 format=2]

[ext_resource path="res://KeyScenes/MiddleArena/MiddleCamera.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Zoom-1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( -2 ),
"update": 3,
"values": [ Vector2( 1.25, 1.25 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Zoom-2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( -2 ),
"update": 3,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Zoom-3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( -2 ),
"update": 3,
"values": [ Vector2( 1.75, 1.75 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( -2 ),
"update": 3,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( -2 ),
"update": 3,
"values": [ Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( -2 ),
"update": 3,
"values": [ Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( -2 ),
"update": 3,
"values": [ Vector2( 0.4, 0.4 ) ]
}

[node name="MiddleCamera" type="Camera2D"]
current = true
limit_left = -800
limit_top = -600
limit_right = 2200
limit_bottom = 1600
limit_smoothed = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.5
drag_margin_top = 0.5
drag_margin_right = 0.5
drag_margin_bottom = 0.5
script = ExtResource( 1 )

[node name="ZoomAnimator" type="AnimationPlayer" parent="."]
anims/Zoom-1 = SubResource( 1 )
anims/Zoom-2 = SubResource( 2 )
anims/Zoom-3 = SubResource( 3 )
anims/Zoom0 = SubResource( 4 )
anims/Zoom1 = SubResource( 5 )
anims/Zoom2 = SubResource( 6 )
anims/Zoom3 = SubResource( 7 )

[node name="TimerZoomCD" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="TimerZoomCD" to="." method="_on_TimerZoomCD_timeout"]
